# rtb

./: .gitignore  Cargo.toml  README.md  answer.sh  update.sh
migrations/2023-07-16-164121_create_pages/: down.sql  up.sql
migrations/2023-07-16-164121_roam_page_item/: up.sql
migrations/2023-07-16-191809_embeddings/: down.sql  up.sql
raycast_scripts/: answer.sh  search.sh  update.sh
src/: db.rs  embeddings.rs  lib.rs  prompting.rs  result_forest.rs  roam.rs  schema.rs  search.rs
