[package]
name = "rtb"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.4"
clap = { version = "4.3.12", features = ["derive"] }
diesel = { version = "2.1.0", features = ["sqlite", "serde_json"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
eyre = "0.6.8"
memmap = "0.7.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
